[package]
name = "impromptu"
version = "0.1.0"
authors = ["Fabian Köhler <fkoehler1024@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
nix = "0.15"
git2 = "0.10.1"
criterion = "0.3.0"
clap = "2.31.2"
regex = "1.3.1"
termion = "1.5.3"
lazy_static = "1.4.0"

[profile.release]
lto = true
panic = 'abort'

[[bench]]
name = "benchmarks"
harness = false
