[package]
name = "impromptu"
description = " Generate your prompt with an efficient compiled rust program and make it look identical across shells."
version = "0.0.1"
authors = ["Fabian Köhler <fkoehler1024@googlemail.com>"]
default-run = "impromptu"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/f-koehler/impromptu"
keywords = ["promp", "shell", "bash", "zsh"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "f-koehler/impromptu", branch="master" }

[dependencies]
cached = "0.9.0"
chrono = "0.4.9"
clap = "2.31.2"
criterion = "0.3.0"
git2 = "0.10.1"
lazy_static = "1.4.0"
nix = "0.15"
regex = "1.3.1"
termion = "1.5.3"

[profile.release]
lto = true
panic = 'abort'

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "impromptu"
path = "src/main.rs"

[[bin]]
name = "impromptu-colors"
path = "src/main-colors.rs"
